# rinha-fx-puro

./: .env.prd  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  rinha-fx-puro.cabal
app/: Main.hs
src/: ClientesApiLib.hs  ExtratoVMsLib.hs  TransacoesVMsLib.hs  ViewModelsLib.hs
src/Clientes/ApiLib/: Api.hs  ObterExtrato.hs  PostarNova.hs
src/Clientes/ViewModelsLib/: ExtratoNaHoraVM.hs  InputTransacaoVM.hs  SaldoNaHoraVM.hs  SaldoVM.hs  TipoTransacaoVM.hs  TransacaoNaHoraVM.hs
src/RepositoryLib/: Repository.hs
