cabal-version:      2.4
name:               rinha-fx-puro
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             leandroalveswork
maintainer:         leandroprogramadoruxdesign@gmail.com

library
    exposed-modules:  Clientes.ApiLib.Api
    build-depends:    base ^>= 4.16.4.0
                      , text >= 2.0.2
                      , aeson >= 2.2.1.0
                      , mtl >= 2.2.1
                      , bytestring >= 0.11.4.0
                      , attoparsec >= 0.14.4
                      , string-conversions >= 0.4.0.1
                      , time >= 1.11.1.1
                      , warp >= 3.3.31
                      , wai >= 3.2.4
                      , servant-server >= 0.20
                      , resource-pool >= 0.4.0.0
                      , postgresql-simple >= 0.7.0.0
    hs-source-dirs:   src
    default-language: Haskell2010

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable rinha-fx-puro
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>= 4.16.4.0
                      , rinha-fx-puro
                      , warp >= 3.3.31
                      , wai >= 3.2.4
                      , servant-server >= 0.20
                      
    hs-source-dirs:   app
    default-language: Haskell2010
